falta ajeitar as rotas put e delete
